feat(database): write datasource info on application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 spring:
   application.name: demo-entity-status
+
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: ${DB_URL:jdbc:postgresql://localhost:5433/demo}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:root}
