--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
     url: ${DB_URL:jdbc:postgresql://localhost:5433/demo}
     username: ${DB_USERNAME:root}
     password: ${DB_PASSWORD:root}
+
+  flyway:
+    baseline-on-migrate: true
+    locations:
+      - classpath:db/migration/v1_0
